# Crust

./: .gitignore  Cargo.toml
src/: cli.rs  lib.rs  main.rs  save.rs
src/cewl/: fetcher.rs  generator.rs  mod.rs  parser.rs
tests/: cli.rs  parser.rs
