[package]
name = "crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
select = "0.6"
clap = "2.33"
log = "0.4"
env_logger = "0.11.3"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5.1"

